# gazebo_compton_camera_python

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: compton_camera.yaml  plotter.yaml
launch/: compton_camera.launch  compton_camera_1.launch  compton_camera_3.launch  compton_camera_front.launch  compton_camera_left.launch  compton_camera_left_realworld.launch  compton_camera_left_realworld_michal.launch  compton_camera_right.launch  compton_plotter.launch  compton_plotter_1.launch  compton_plotter_3.launch  compton_plotter_rosbag.launch  cone_plotter.launch
rviz/: uav1.rviz
scripts/: compton_camera.py
scripts/geometry/: cone.py  raytracing.py  rectangle3d.py  solid_angle.py
scripts/photon_attenuation/: conversions.py  materials.py  physics.py
src/: compton_plotter.cpp  cone_plotter.cpp
tmux/: session.yml
tmux/one_drone/: session.yml
tmux/three_drones/: pos.txt  session.yml
worlds/: grass_plane.world
