<?xml version="1.0"?>
<package format="2">
  <name>gazebo_compton_camera_python</name>
  <version>1.0.0</version>
  <description>Gazebo Compton camera python implementaion</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>gazebo_rad_msgs</depend>
  <depend>rad_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
